@@ -1,8 +1,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 3;
-use Test::NoWarnings;    # Adds an extra test.
+use Test::More tests => 2;
 
 BEGIN {
   package MyApp::Controller::Foo;
