@@ -1,5 +1,6 @@
 This file documents the revision history for Perl extension Catalyst.
 
+        - Removed test dependency on Test::NoWarnings
         - Removed dependency on UNIVERSAL::require
         - Split out Catalyst::Helper into a new distribution
         - un-bundled the plugins as they are now pre-reqs for Catalyst::Helper
